k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-projects
  labels:
    name: backend-projects
